package AV2.projeto.model.interfaces;

public interface Desenvolve {
    void codar();
    void resolverProblemas();
}


