package AV2.projeto.model.interfaces;

public interface Gerencia {
    void organizarEquipe();
    void conduzirReunioes();
}
