package AV2.projeto.model.interfaces;

public interface Treina {
    void ensinarTecnologia();
    void motivarEquipe();
}